Refactor: rename internal InstantiationStrategy to InstanceCreator